@@ -248,6 +248,9 @@ extern bool gres_select_util_job_mem_set(List job_gres_list,
 		 * The logic below is correct because the only mem_per_gres
 		 * is --mem-per-gpu adding another option will require change
 		 * to take MAX of mem_per_gres for all types.
+		 * Similar logic is in _step_alloc() (which is called by
+		 * gres_ctld_step_alloc()), which would also need to be changed
+		 * if another mem_per_gres option was added.
 		 */
 		if ((mem_per_gres == 0) || !job_data_ptr->gres_cnt_node_select)
 			continue;
